--- a/vmseg_segmentation_demo.ipynb
+++ b/vmseg_segmentation_demo.ipynb
@@ -84,7 +84,7 @@
     "\n",
     "    return  var_mean\n",
     "\n",
-    "def variance_map_modif(image_normale, image_var, seuil, alpha):\n",
+    "def variance_map_modif(image_normale, image_var, threshold, alpha):\n",
     "    \"\"\"\n",
     "    Modifying variance map in order the visualize correctly \n",
     "\n",
@@ -108,7 +108,7 @@
     "    image_var6 = 255 - image_var5\n",
     "    \n",
     "    # eliminating areas to intense in order to remove vessels: \n",
-    "    image_var6[image_normale > seuil] = 255 \n",
+    "    image_var6[image_normale > threshold] = 255 \n",
     "    \n",
     "    return image_var6\n",
     "\n",
